webcleaner (0.14) unstable; urgency=low

  * sanitize default config
  * if you connect to your proxy directly (e.g. http://localhost:8080/),
    you see config and statistic data

 -- Bastian Kleineidam <calvin@debian.org>  Thu,  2 Aug 2001 21:44:42 +0200

webcleaner (0.13) unstable; urgency=low

  * fix an assertion error in HttpServer.py: only close the server when
    it is connected
  * add missing second argument to handle_proc function, this prevented
    xml files to be parsed correctly
  * fixed the parser so that <tag/> tags are handled correctly
  * implemented Windows-specific daemon handler functions
  * Remove GIF image filtering from default config. Mozilla provides
    this itself :)

 -- Bastian Kleineidam <calvin@debian.org>  Mon, 30 Jul 2001 22:01:56 +0200

webcleaner (0.12) unstable; urgency=low

  * always initialize filter attributes in HttpServer.py
  * minor bugfixes with unintialized vars
  * use FOX and FXPy >= 0.99.167
  * global config object in wc.proxy
  * more status info (get it with http://_webcleaner/)
    hit statistics still need to be filled out
  * added missing return in daemon/posix.py:start()
    now the GUI Proxy buttons are working for POSIX systems
  * new proxy config option "no proxy for" to disable filtering
    for specific sites
  * POST requests no longer block forever
  * include debian/copyright in dist
  * remove #! line from two .py files which are not scripts

 -- Bastian Kleineidam <calvin@debian.org>  Wed, 25 Apr 2001 02:54:46 +0200

webcleaner (0.11) unstable; urgency=low

  * new proxy code: HTTP/1.1 and select() I/O
  * use versioned PID file
  * new CVS module webcleaner2
  * parent proxy support for the new proxy code

 -- Bastian Kleineidam <calvin@debian.org>  Wed, 18 Apr 2001 19:34:49 +0200

webcleaner (0.10) unstable; urgency=low

  * convert config values from unicode to strings
  * rename FilterRule to FolderRule (and all other occurences)
