@@ -6,7 +6,7 @@
  parentproxyport="9090"
  timeout="30"
  obfuscateip="0"
- debuglevel="0"
+ debuglevel="3"
  noproxyfor="localhost,127.0.0.1"
 >
 <filter name="Rewriter"/>
