@@ -2,7 +2,7 @@ Source: webcleaner
 Section: web
 Priority: optional
 Maintainer: Bastian Kleineidam <calvin@debian.org>
-Standards-Version: 3.5.6
+Standards-Version: 3.5.6.0
 Build-Depends: python2-base, debhelper (>= 3.0.0), debconf
 
 Package: webcleaner
@@ -12,10 +12,11 @@ Suggests: webcleanerconf
 Description: a filtering HTTP proxy
  Features:
   o disable animated GIFs
-  o on-the-fly compression of documents
-  o privacy (remove user-agent: header and obfuscate IP address)
-  o can remove all HTML crap (adverts, javascript, ...)
-  o completely customizable
+  o compress documents on-the-fly (with gzip)
+  o remove/add HTTP headers
+  o remove unwanted HTML (adverts, javascript, ...)
+  o customizable to suit your (filtering) needs
+  o HTTP/1.1 support
 
 Package: webcleanerconf
 Architecture: all
